<resources>
    <string name="app_name">FunFit</string>

    //Main Activity
    <string name="interval">Interval</string>
    <string name="long_distance">Long distance</string>
    <string name="height_measurement">Height measurement</string>
    <string name="random_workout">Random workout</string>
    <string name="user_data">User data</string>
    <string name="title_activity_interval">Interval</string>

    //Interval
    <string name="timer_val">00:00:00</string>
    <string name="pause_button_label">Pause</string>
    <string name="start_button_label">Start</string>

    //Random workout
    <string name="shake">Shake your phone and get your exercise!</string>




</resources>
