<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="christensenjohnsrud.funfit.MainActivity">

    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:src="@drawable/funfit_logo" />

    <Button
        style="@style/funFitButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interval"
        android:id="@+id/button_interval"
        android:layout_gravity="center_horizontal"

        />

    <Button
        style="@style/funFitButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_distance"
        android:id="@+id/button_long_distance"
        android:layout_gravity="center_horizontal" />

    <Button
        style="@style/funFitButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height_measurement"
        android:id="@+id/button_height_measurement"
        android:layout_gravity="center_horizontal" />

    <Button
        style="@style/funFitButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_workout"
        android:id="@+id/button_random"
        android:layout_gravity="center_horizontal" />

    <Button
        style="@style/funFitButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_data"
        android:id="@+id/button_user"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
